# better_tensorflow

./: .env.exemple  .gitignore  Cargo.toml  README.md  docker-compose.yml  poly_xor.weights  pyproject.toml  rbf_xor.weights  weight_temp
python/: requirements.txt
python/api/: app.py  data_manager.py  data_pre_process.py  database_manager.py
python/better_tensorflow/: __init__.py  data_manager.py
python/case_test_note_book/: mlp.ipynb  ols.ipynb  rbf.ipynb  svm.ipynb  test.py
python/test/: linear_classifier.py  linear_regression.py  mlp.py  mlp_reg.py  ols.py  poly_xor.weights  rbf.py  rbf_xor.weights  rosenblatt.py  svm.py  weights_ols.json  weights_ols.weights
python/tests/: test_all.py
src/: activation_function.rs  data_converter.rs  data_manager.rs  database.rs  kmeans.rs  lib.rs  linear.rs  linear_classification.rs  linear_regression.rs  loss.rs  math.rs  matrix.rs  mlp.rs  ols.rs  perceptron.rs  rbf.rs  rosenblatt_py.rs  svm.rs  svm_bis.rs
src/data/: data_manager.rs
src/linear_model/: linear_regression.rs
src/nn/: perceptron.rs
src/utils/: matrix.rs
tools/: import_dataset_to_mongo.py  resnet_training.py  soung_to_image.py  test_better_model.py  test_e2e.py
tools/scrapper/: .gitignore  README.md  bensound.py
train/: linear_reg_2025-04-15_18-33-05  mlp_2025-04-03_21-44-25  mlp_2025-04-03_21-44-32  mlp_2025-04-07_23-20-11  mlp_2025-04-08_00-50-55  mlp_2025-04-08_00-54-15
