[package]
name = "better_tensorflow"
version = "0.1.0"
edition = "2021"



[lib]
name = "better_tensorflow"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8"
pyo3 = { version = "0.20", features = ["extension-module"] }



[[bin]]
name = "linear_regression"
path = "src/linear_model/linear_regression.rs"

