[package]
name = "better_tensorflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "better_tensorflow"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
rand = "0.9.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
ndarray = "0.15"
mongodb = "3.2.3"
tokio = "1.45.1"
serde_json = "1.0.140"
